건물 후기 반영
